# MP4

./: .gitignore  CMakeLists.txt  MP4.cpp  MP4.hpp  Parser.cpp  Parser.hpp  Processor.cpp  Processor.hpp  README.md  Writer.cpp  Writer.hpp  atoms.hpp  concat.cpp  concat.txt  dataTypes.hpp  datatypes.hpp  gopro6_hierarchyData_old.txt  join.cpp  splunk_append.txt  testMP4.cpp  types.hpp
atoms/: BCID.cpp  BCID.hpp  CAME.cpp  CAME.hpp  FIRM.cpp  FIRM.hpp  GPMF.cpp  GPMF.hpp  GUMI.cpp  GUMI.hpp  HMMT.cpp  HMMT.hpp  LENS.cpp  LENS.hpp  MUID.cpp  MUID.hpp  SETT.cpp  SETT.hpp  alis.cpp  alis.hpp  atom.cpp  atom.hpp  atomBuild.cpp  atomBuild.hpp  atomCopyFile.cpp  atomCopyFile.hpp  atomParse.cpp  atomParse.hpp  atomReadFile.cpp  atomReadFile.hpp  atomWriteFile.cpp  atomWriteFile.hpp  co64.cpp  co64.hpp  ctts.cpp  ctts.hpp  dinf.cpp  dinf.hpp  dref.cpp  dref.hpp  (+66 more)
atoms_create/: atom_create.cpp  atom_create.hpp  ftyp_create.cpp  ftyp_create.hpp  mdat_create.cpp  mdat_create.hpp  root_create.cpp  root_create.hpp
data/: types.hpp
